--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -3,9 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/item_profile"
+        android:title="Profile"
+        app:showAsAction="never">
+    </item>
+    <item
         android:id="@+id/item_settings"
         android:title="Settings"
         app:showAsAction="never">
-
     </item>
 </menu>
