--- a/app/src/main/res/layout/fragment_tab3_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab3_fragment.xml
@@ -6,9 +6,9 @@
     tools:context=".tab1_fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/donatesRecyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tab3" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
