--- a/app/src/main/res/layout/row_donates.xml
+++ b/app/src/main/res/layout/row_donates.xml
@@ -79,6 +79,8 @@
         android:id="@+id/pImageIv"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         android:background="@color/cardview_light_background"/>
 
     <TextView
