--- a/app/src/main/res/layout/activity_add_donation.xml
+++ b/app/src/main/res/layout/activity_add_donation.xml
@@ -77,7 +77,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="15dp"
                 android:hint="Name"
-                android:id="@+id/etTitle"/>
+                android:id="@+id/ettitle"/>
         </LinearLayout>
 
         <LinearLayout
