refresh after delete and pull down refresh

--- a/app/src/main/res/layout/fragment_tab3_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab3_fragment.xml
@@ -5,10 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".tab1_fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/donatesRecyclerview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/pullToRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content">
+        <!-- TODO: Update blank fragment layout -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/donatesRecyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
