Removed age in user profile (in class, java and xml) Added update profile picture feature

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -31,18 +31,6 @@
         app:layout_constraintTop_toBottomOf="@+id/imgProfilePicture" />
 
     <TextView
-        android:id="@+id/txtProfileAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="8dp"
-        android:text="Age: "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtProfileName" />
-
-    <TextView
         android:id="@+id/txtProfileEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,8 +39,9 @@
         android:layout_marginEnd="8dp"
         android:text="Email: "
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtProfileAge" />
+        app:layout_constraintTop_toBottomOf="@+id/txtProfileName" />
 
     <Button
         android:id="@+id/btnUpdateProfileInfo"
