--- a/app/src/main/res/layout/row_requests.xml
+++ b/app/src/main/res/layout/row_requests.xml
@@ -52,12 +52,20 @@
 
             </LinearLayout>
 
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#F5F0F0"/>
+
+        <TextView
+            android:id="@+id/pReasonTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:autoLink="all"/>
 
         <LinearLayout
             android:layout_width="match_parent"
