--- a/app/src/main/res/layout/fragment_tab2_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab2_fragment.xml
@@ -6,15 +6,22 @@
     tools:context=".tab2_fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tab2" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_my"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        <Button
+            android:id="@+id/btn_my"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Donation" />
+
+        <Button
+            android:id="@+id/wishlist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Wishlist" />
+
+    </LinearLayout>
 
 </FrameLayout>
